<resources>
    <string name="app_name">Story App</string>
    <string name="title_activity_maps">Maps</string>
    <string name="include_location">Include Location</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="logout_confirm">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="upload">Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>

    <string name="error_email_invalid">Format email tidak valid</string>
    <string name="error_password_short">Password tidak boleh kurang dari 8 karakter</string>
    <string name="error_empty_field">Field ini tidak boleh kosong</string>

    <string name="no_stories">Tidak ada cerita</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="empty_image_warning">Please select an image first</string>
    <string name="location_not_found">Location not found. Try again.</string>
    <string name="login_success">Login berhasil</string>
    <string name="login_failed">Login gagal</string>
</resources>
